<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_maps_view"
        android:enabled="true"
        android:icon="@drawable/baseline_map_white_18dp"
        android:title="@string/bottom_navigation_menu_maps_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list_view"
        android:enabled="true"
        android:icon="@drawable/baseline_view_list_white_18dp"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmates"
        android:enabled="true"
        android:icon="@drawable/baseline_people_white_18dp"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="ifRoom" />
</menu>