...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
...


        <FrameLayout
            android:id="@+id/activity_home_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/activity_home_bottom_navigation"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ListView
            android:id="@+id/lvResultSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
