<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="Find_a_nice_restaurant">Find a nice restaurant and invite yours co-worker for lunch!</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_twitter">Sign in with Twitter</string>
    <string name="sign_in_by_email">Sign in by email</string>
    <string name="logo">logo</string>
    <string name="connection_succeed">Connection succeed!</string>
    <string name="error_authentication_canceled">error authentication canceled</string>
    <string name="error_no_internet">error no internet</string>
    <string name="error_unknown_error">error unknown error</string>
    <!-- Facebook purpose -->
    <string name="facebook_app_id">305971943412023</string>
    <string name="fb_login_protocol_scheme">fb305971943412023</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Toolbar -->
    <string name="title_toolbar">I\'m Hungry!</string>
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_maps_view">Maps View</string>
    <string name="bottom_navigation_menu_list_view">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>
    <!-- NAVIGATION VIEW MENU ITEMS -->
    <string name="your_lunch">YOR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_maps">Map</string>


    <!-- BOTTOM DETAIL NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_call">CALL</string>
    <string name="bottom_navigation_menu_like">LIKE</string>
    <string name="bottom_navigation_menu_public">WEBSITE</string>

    <!--NOTIFICATION -->
    <string name="notification_title">Notification Go4Lunch</string>
    <string name="default_notification_channel_id">0042</string>
    <string name="no_coworker">"no colleague has chosen this restaurant yet"</string>
    <string name="no_restaurant">"you did not choose a restaurant today"</string>
    <string name="switch_notification_text">If you turn on notifications, you will receive a notification every day at noon to remind you which restaurant you have chosen, its address, and who will be with you.</string>
    <string name="switch_notification">Enable notifications</string>
    <string name="select_language_text">If you change the language, the application will have to restart to apply the modification.</string>
    <string name="cancel">Cancel</string>
    <string name="you_eat">This lunch, you eat at\u0020</string>
    <string name="located">\u0020located at\u0020</string>
    <string name="with_you">\u0020will be there with you.</string>

    <string name="no_schedul">No schedule</string>
    <string name="open">Open until\u0020</string>
    <string name="close">Close\u0020</string>
    <string name="closing_soon">Closing soon\u0020</string>

    <!--SEARCH VIEW -->
    <string name="search_view">Search Restaurant</string>
    <string name="speak_voice">Speak to search</string>
    <string name="no_url">Sorry ! No url found !</string>

    <!-- EMAIL DIALOG BOX -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Your Name</string>
    <string name="ok">OK</string>
    <string name="addAvatar">Do you want add picture ?</string>
    <string name="yes">YES</string>

    <!-- DIALOG BOX -->
    <string name="eating">\u0020is eating\u0020</string>
    <string name="joining">\u0020is joining !</string>
    <string name="decided">\u0020hasn\'t decided yet</string>
    <string name="sorry">Sorry but\u0020</string>
    <string name="no_url_found">No url found!</string>
    <string name="no_website">This restaurant does not seem to have an website</string>
    <string name="GPS_is_settings">GPS is settings</string>
    <string name="settings_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="notification_enable">Notifications enable</string>
    <string name="notification_turn_on">Notification is not enabled. Do you want to go to settings menu?</string>
    <string name="restarting">Restart required.</string>
    <string name="restarting_now">Want to restart now?</string>
    <string name="later">Later</string>
    <string name="select">Select language</string>
    <string name="en">English</string>
    <string name="fr">French</string>

    <!-- TWITTER KEYS -->
    <string  name="twitter_consumer_key" translatable = "false">PLkNUVeGY9NprxwBDBbmXl1lg</string>
    <string  name="twitter_consumer_secret" translatable = "false">T6WsvoJvFOJPVcu2Ie0zLyCWd9LkkFfdDaDz1srrvhvHSKIH7O</string>

    <!-- TOAST -->
    <string name="not_valid">Sorry but is not a valid email</string>
    <string name="Language_selected">Language already selected!</string>
    <string name="enter_pass">enter your password please</string>
    <string name="auth_failed">Authentication failed. </string>
    <string name="not_choice_today">sorry but you did not choose a restaurant today.</string>
    <string name="not_phone_permission">You don\'t assign permission.</string>
    <string name="liked">liked !</string>
    <string name="unlike">unlike !</string>
    <string name="image_view">TODO</string>

</resources>
